--- a/style.css
+++ b/style.css
@@ -32,28 +32,18 @@ h2{
    padding: 45px;
 }
 
-.window{
-   
-   padding-top: 8px;
-   padding-left: 30px;
-   padding-right: 30px;
-   padding-bottom: 15px;
-   margin-bottom: 98px;
-
-   height: 900px;
-   width: 216px;
-   border-radius: 12px;
-   border-width: 5px;
-   border-color: bisque;
-   background-color: rgb(28, 29, 80);
-   
+.display-flex{
+   display: flex;
 }
 
-
-.user-name-style{
-   color: rgb(28, 29, 80);
+.seperator{
    background-color: bisque;
-   padding-left: 1px;
-   padding-right: 3px;
-   border-radius: 3px;
+   width: 252px;
+   padding-bottom: 1px;
+}
+
+.seperator-short{
+   background-color: darkgray;
+   width: 194px;
+   padding-bottom: 1px;
 }
